==> DanielJerolm/gpcc/src/osal/os/chibios_arm/Thread.cpp <==
#include "Thread.hpp"
#include "Panic.hpp"
#include "gpcc/src/osal/AdvancedMutexLocker.hpp"
#include "gpcc/src/osal/MutexLocker.hpp"
#include "gpcc/src/string/tools.hpp"
#include <iomanip>
#include <sstream>
#include <stdexcept>
#include <system_error>
#include <cxxabi.h>
#define NS_PER_SEC      1000000000UL
#define NS_PER_SYSTICK  (NS_PER_SEC / CH_CFG_ST_FREQUENCY)

void Thread::Sleep_ms(uint32_t const ms)
{
  Internal_Sleep_ns(ms * 1000000ULL);
}

std::string Thread::GetInfo(size_t const nameFieldWidth) const
{
  if (nameFieldWidth < 4U)
    throw std::invalid_argument("Thread::GetInfo: 'nameFieldWidth' too small");

  // the information is build into "infoLine"
  std::ostringstream infoLine;

  // start with thread's name
  if (name.size() <= nameFieldWidth)
    infoLine << std::left << std::setw(nameFieldWidth) << std::setfill(' ') << name;
  else
    infoLine << name.substr(0, nameFieldWidth - 3U) << "...";

  MutexLocker mutexLocker(mutex);

  bool detailsRequired = false;

  switch (threadState)
  {
    case ThreadState::noThreadOrJoined:
      infoLine << " no     ";
      break;

    case ThreadState::starting:
      infoLine << " start  ";
      break;

    case ThreadState::running:
      infoLine << " run    ";
      detailsRequired = true;
      break;

    case ThreadState::terminated:
      infoLine << " term   ";
      break;
  } // switch (threadState)

  if (detailsRequired)
  {
    // ChibiOS priority
    infoLine << std::right << std::setw(3) << std::setfill(' ') << pThread->prio << ' ';

    // stack size
    infoLine << std::right << std::setw(10) << std::setfill(' ') << totalStackSize << ' ';

    // stack usage
    size_t const used = InternalMeasureStack();
    if (used < 100000000UL)
    {
      // perentage: round up
      uint_fast8_t const percentage = ((used * 100U) + (totalStackSize - 1U)) / totalStackSize;
      infoLine << std::right << std::setw(10) << std::setfill(' ') << used
               << " (" << std::right << std::setw(3) << std::setfill(' ') << static_cast<unsigned int>(percentage) << "%) ";
    }
    else
      infoLine << "       Err (Err%) ";

    // stack bottom
    infoLine << gpcc::string::ToHex(reinterpret_cast<uint32_t>(pThread->wabase), 8U) << ' ';

    // stack top
    infoLine << gpcc::string::ToHex(reinterpret_cast<uint32_t>(pThread), 8U);
  }
  else
  {
    infoLine << "--- ---------- ---------- ------ ---------- ----------";
  }

  return infoLine.str();
}

void Thread::Start(tEntryFunction const & _entryFunction,
                   SchedPolicy const schedPolicy,
                   priority_t const priority,
                   size_t const stackSize)
{
  // check parameters
  if (!_entryFunction)
    throw std::invalid_argument("Thread::Start: '_entryFunction' refers to nothing");

  #pragma GCC diagnostic push
  #pragma GCC diagnostic ignored "-Wtype-limits"
  if ((priority < minPriority) || (priority > maxPriority))
    throw std::invalid_argument("Thread::Start: 'priority' is out of bounds");
  #pragma GCC diagnostic pop

  if ((priority != 0U) && (schedPolicy != SchedPolicy::Fifo) && (schedPolicy != SchedPolicy::RR))
    throw std::invalid_argument("Thread::Start: Selected scheduling policy requires priority level 0");

  if ((stackSize < GetMinStackSize()) || ((stackSize % GetStackAlign()) != 0U))
    throw std::invalid_argument("Thread::Start: 'stackSize' is invalid");

  // map universal priority to ChibiOS
  tprio_t const mappedPrio = UniversalPrioToChibiOSPrio(priority, schedPolicy);

  MutexLocker joinMutexLocker(joinMutex);
  MutexLocker mutexLocker(mutex);

  // check that there is currently no thread
  if (threadState != ThreadState::noThreadOrJoined)
    throw std::logic_error("Thread::Start: There is already a thread");

  // determine required ChibiOS thread working area size (multiple of PORT_STACK_ALIGN)
  size_t const WAsize = THD_WORKING_AREA_SIZE(stackSize);

  // allocate thread working area (aligned to PORT_WORKING_AREA_ALIGN)
  pWA = new uint8_t[WAsize + (PORT_WORKING_AREA_ALIGN - 1U)];
  uint8_t* const pWA_aligned = reinterpret_cast<uint8_t*>(MEM_ALIGN_NEXT(pWA, PORT_WORKING_AREA_ALIGN));

  // prepare thread start
  entryFunction         = _entryFunction;
  threadState           = ThreadState::starting;
  pThreadReturnValue    = nullptr;
  cancelabilityEnabled  = true;
  cancellationPending   = false;

  // create and start thread
  pThread = chThdCreateStatic(pWA_aligned, WAsize, mappedPrio, Thread::InternalThreadEntry1, this);

  // Calculate total stack size. May be larger than "stackSize", because THD_WORKING_AREA_SIZE may add some extra
  // bytes for interrupt handling, context switch, etc.
  totalStackSize = reinterpret_cast<uintptr_t>(pThread) - reinterpret_cast<uintptr_t>(pThread->wabase);

  // check: actual stack size must be at least "stackSize"
  if (totalStackSize < stackSize)
    PANIC();

  // Wait until the new thread leaves the starting-state. Any unexpected error here will result in panic.
  try
  {
    // note: Wait() does not contain a cancellation point on ChibiOS
    while (threadState == ThreadState::starting)
      threadStateRunningCondVar.Wait(mutex);
  }
  catch (...)
  {
    PANIC();
  }
}

void Thread::Cancel(void)
{
  MutexLocker mutexLocker(mutex);

  // verify that the object manages a thread, which has not yet been joined
  if (threadState == ThreadState::noThreadOrJoined)
    throw std::logic_error("Thread::Cancel: No thread");

  // not yet terminated?
  if (threadState != ThreadState::terminated)
  {
    // verify, that the current thread is not the one managed by this object
    if (chThdGetSelfX() == pThread)
      throw std::logic_error("Thread::Cancel: Invoked by the managed thread");

    // verify, that cancellation of the thread has not yet been requested
    if (cancellationPending)
      throw std::logic_error("Thread::Cancel: Cancellation already requested");

    cancellationPending = true;
  }
}

void* Thread::Join(bool* const pCancelled)
{
  MutexLocker joinMutexLocker(joinMutex);
  AdvancedMutexLocker mutexLocker(mutex);

  // verify that the object manages a thread, which has not yet been joined
  if (threadState == ThreadState::noThreadOrJoined)
    throw std::logic_error("Thread::Join: No thread");

  // verify, that the current thread is not the one managed by this object
  if (chThdGetSelfX() == pThread)
    throw std::logic_error("Thread::Join: Thread cannot join itself");

  mutexLocker.Unlock();

  // wait for termination and join with thread
  msg_t const exitCode = chThdWait(pThread);

  // relock mutex
  try
  {
    mutexLocker.Relock();
  }
  catch (...)
  {
    PANIC();
  }

  // check and update threadState, the object does no longer manage a thread
  if (threadState != ThreadState::terminated)
    PANIC();

  threadState = ThreadState::noThreadOrJoined;

  // clean-up
  delete [] pWA;

  // examine the way the thread has terminated
  switch (exitCode)
  {
    case TEC_Normal:
    case TEC_TerminateNow:
      break;

    case TEC_Cancelled:
      if (pThreadReturnValue != nullptr)
        PANIC(); // unexpected pThreadReturnValue
      break;

    default:
      PANIC(); // Invalid exitCode
      break;
  }

  // anyone interested in if the thread was cancelled?
  if (pCancelled != nullptr)
    *pCancelled = (exitCode == TEC_Cancelled);

  return pThreadReturnValue;
}

void Thread::SetCancelabilityEnabled(bool const enable)
{
  MutexLocker mutexLocker(mutex);

  // verify that the current thread is the one managed by this object
  if ((threadState != ThreadState::running) || (chThdGetSelfX() != pThread))
    throw std::logic_error("Thread::SetCancelabilityEnabled: Not invoked by the managed thread");

  cancelabilityEnabled = enable;
}

void Thread::TestForCancellation(void)
{
  MutexLocker mutexLocker(mutex);

  // verify that the current thread is the one managed by this object
  if ((threadState != ThreadState::running) || (chThdGetSelfX() != pThread))
    throw std::logic_error("Thread::TestForCancellation: Not invoked by the managed thread");

  if ((cancelabilityEnabled) && (cancellationPending))
    throw ThreadCancellationException();
}
