==> DanielJerolm/gpcc/src/osal/os/zephyr/Thread.cpp <==
#include <gpcc/osal/Thread.hpp>
#include <gpcc/osal/MutexLocker.hpp>
#include <gpcc/osal/Panic.hpp>
#include <gpcc/raii/scope_guard.hpp>
#include <gpcc/raii/unique_c_ptr.hpp>
#include <gpcc/string/StringComposer.hpp>
#include <limits>
#include <stdexcept>
#include <system_error>
#include <cerrno>

void Thread::Sleep_ms(uint32_t const ms)
{
  uint32_t rest = ms;
  while (rest != 0U)
  {
    uint32_t const portion = (rest > std::numeric_limits<int32_t>::max()) ? std::numeric_limits<int32_t>::max() : rest;
    if (k_msleep(portion) != 0)
    {
      // k_wakeup() is not used, so returning anything but zero is not anticipated
      PANIC();
    }
    rest -= portion;
  }
}

std::string Thread::GetInfo(size_t const nameFieldWidth) const
{
  using gpcc::string::StringComposer;

  if (nameFieldWidth < 4U)
    throw std::invalid_argument("Inv. args.");

  StringComposer infoLine;
  infoLine << StringComposer::AlignLeft;

  gpcc::osal::MutexLocker mutexLocker(mutex_);

  if (name_.size() <= nameFieldWidth)
    infoLine << StringComposer::Width(nameFieldWidth) << name_;
  else
    infoLine << name_.substr(0, nameFieldWidth - 3U) << "...";

  infoLine << ' ';

  if (threadState_ != ThreadState::noThreadOrJoined)
  {
    char buf[24];
    char const * state = k_thread_state_str(thread_id_, buf, sizeof(buf));
    infoLine << StringComposer::Width(sizeof(buf)) << state;

    infoLine << StringComposer::AlignRight;

    int priority = k_thread_priority_get(thread_id_);
    infoLine << StringComposer::Width(4) << priority;

    infoLine << StringComposer::Width(10) << stackSize_;

    size_t freeSpace = 0U;
    int status = k_thread_stack_space_get(thread_id_, &freeSpace);
    if (status != 0)
      throw std::system_error(status, std::generic_category(), "k_thread_stack_space_get() failed");

    size_t usedSpace = 0U;
    if (freeSpace < stackSize_)
      usedSpace = stackSize_ - freeSpace;

    infoLine << StringComposer::Width(10) << usedSpace;
  }
  else
  {
    infoLine << "----------------------- ---- --------- ---------";
  }

  return infoLine.Get();
}

void Thread::Start(tEntryFunction const & entryFunction,
                   SchedPolicy const schedPolicy,
                   priority_t const priority,
                   size_t const stackSize)
{
  // Check parameters
  // ('priority' and 'schedPolicy' are checked in UniversalPrioToZephyrPrio())
  if (!entryFunction)
    throw std::invalid_argument("Inv. args.");

  if ((stackSize < GetMinStackSize()) || ((stackSize % GetStackAlign()) != 0U))
    throw std::invalid_argument("Inv. args.");

  // map universal priority to Zephyr
  int const mappedPrio = UniversalPrioToZephyrPrio(priority, schedPolicy);

  MutexLocker joinMutexLocker(joinMutex_);
  MutexLocker mutexLocker(mutex_);

  // check that there is currently no thread
  if (threadState_ != ThreadState::noThreadOrJoined)
    throw std::logic_error("Thread alread existing");

  // allocate memory for stack
  pStack_ = k_thread_stack_alloc(stackSize, 0U);
  if (pStack_ == nullptr)
    throw std::bad_alloc();

  stackSize_ = stackSize;

  ON_SCOPE_EXIT(releaseStack)
  {
    k_thread_stack_free(pStack_);
    pStack_ = nullptr;
  };

  // prepare thread start
  entryFunction_        = entryFunction;
  threadState_          = ThreadState::starting;
  threadRetVal_         = nullptr;
  cancelabilityEnabled_ = true;
  cancellationPending_  = false;
  cancelled_            = false;

  // start thread
  thread_id_ = k_thread_create(&thread_,
                               pStack_, stackSize,
                               &Thread::InternalThreadEntry1,
                               this, nullptr, nullptr,
                               mappedPrio,
                               0U,
                               K_NO_WAIT);

  // Wait until the new thread leaves the starting-state. Any unexpected error here will result in panic.
  try
  {
    while (threadState_ == ThreadState::starting)
      threadStateRunningCondVar_.Wait(mutex_);
  }
  catch (...)
  {
    PANIC();
  }

  ON_SCOPE_EXIT_DISMISS(releaseStack);
}

void Thread::Cancel(void)
{
  MutexLocker mutexLocker(mutex_);

  // verify that the object manages a thread, which has not yet been joined
  if (threadState_ == ThreadState::noThreadOrJoined)
    throw std::logic_error("No thread");

  // not yet terminated?
  if (threadState_ != ThreadState::terminated)
  {
    // verify, that the current thread is not the one managed by this object
    if (IsItMe())
      throw std::logic_error("Wrong caller");

    // verify, that cancellation of the thread has not yet been requested
    if (cancellationPending_)
      throw std::logic_error("Already pending");

    cancellationPending_.store(true, std::memory_order_relaxed);
  }
}

void* Thread::Join(bool* const pCancelled)
{
  MutexLocker joinMutexLocker(joinMutex_);

  {
    MutexLocker mutexLocker(mutex_);

    // verify that the object manages a thread, which has not yet been joined
    if (threadState_ == ThreadState::noThreadOrJoined)
      throw std::logic_error("No thread");

    // verify, that the current thread is not the one managed by this object
    if (IsItMe())
      throw std::logic_error("Wrong caller");
  }

  // wait for termination and join with thread
  int status = k_thread_join(&thread_, K_FOREVER);
  if (status != 0)
    throw std::system_error(status, std::generic_category(), "k_thread_join() failed");

  try
  {
    MutexLocker mutexLocker(mutex_);

    // check and update threadState_, the object does no longer manage a thread
    if (threadState_ != ThreadState::terminated)
      PANIC();

    threadState_ = ThreadState::noThreadOrJoined;

    // release stack
    status = k_thread_stack_free(pStack_);
    if (status != 0)
      PANIC();

    pStack_ = nullptr;

    // anyone interested in if the thread was cancelled?
    if (pCancelled != nullptr)
      *pCancelled = cancelled_;

    return threadRetVal_;
  }
  catch (...)
  {
    PANIC();
  }
}

bool Thread::SetCancelabilityEnabled(bool const enable)
{
  // verify that the current thread is the one managed by this object
  if (!IsItMe())
    throw std::logic_error("Wrong caller");

  bool const retVal = cancelabilityEnabled_;
  cancelabilityEnabled_ = enable;
  return retVal;
}

void Thread::TestForCancellation(void)
{
  // verify that the current thread is the one managed by this object
  if (!IsItMe())
    throw std::logic_error("Wrong caller");

  if (cancellationPending_.load(std::memory_order_relaxed))
    throw ThreadCancellationException();
}
